Login,register,logout,logout-all,refresh_token
