# server/src/routes/auth/index.js
@@ -1,4 +1,6 @@
 const express = require("express");
+const { register, login, logout, logoutAll, refreshToken } = require("../../controllers/auth/index");
+const { authenticateToken } = require("../../middleware/auth");
 // const {
 //   login,
 //   register,
@@ -10,9 +12,10 @@ const express = require("express");
 
 const router = express.Router();
 
-// router.post("/login", login);
-// router.post("/register", upload.single("avatar"), register);
-// router.post("/refresh-token", refreshToken);
-// router.post("/logout", authenticateToken, logout);
+router.post("/login", login);
+router.post("/register", register);
+router.post("/refresh-token", refreshToken);
+router.post("/logout", logout);
+router.post("/logout-all", authenticateToken, logoutAll);
 
 module.exports = router;
